--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,7 @@ dependencies:
   flutter_bloc: ^8.1.4
   image_picker: ^1.0.7
   equatable: ^2.0.5
+  intl: ^0.17.0
 
 dev_dependencies:
   flutter_test:
