--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,8 @@ dependencies:
   image_picker: ^1.0.7
   equatable: ^2.0.5
   intl: ^0.17.0
+  video_player: ^2.8.6
+  youtube_player_flutter: ^8.0.0
 
 dev_dependencies:
   flutter_test:
